--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-hello 亚军，小碧池
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Title</title>
+</head>
+<body>
+    hello 亚军，小碧池
+</body>
+</html>
