更改主页内容
框架是粘贴的啦~以后慢慢改

--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
 			   <div class="wmuSliderWrapper">
 				   <article style="position: absolute; width: 100%; opacity: 0;"> 
 				   	<div class="slider_text">
-				   	  <h1>Meet <span class="head">Brandi!</span></h1>
-				   	  <h2><span class="green">/Creative</span> one page template.</h2>
+				   	  <h1>Meet <span class="head">主页是刚刚粘贴的!</span></h1>
+				   	  <h2><span class="green">/Creative</span> 我要慢慢改了，给点时间 !</h2>
 				   	  <div class="m_1"><span class="left_line"> </span> <p>We are a team of professionals</p><span class="right_line"> </span></div>
 				   	  <div class="social">	
 						   <ul>	
@@ -111,8 +111,8 @@
 				   </article>
 				   <article style="position: relative; width: 100%; opacity: 1;"> 
 				   	<div class="slider_text">
-				   	  <h1>Lorem<span class="head"> dolor!</span></h1>
-				   	  <h2><span class="green">/tincidu</span> one page template.</h2>
+				   	  <h1>Lorem<span class="head"> 主页是刚刚粘贴的!</span></h1>
+				   	  <h2><span class="green">/tincidu</span>我要慢慢改了，给点时间 !</h2>
 				   	  <div class="m_1"><span class="left_line"> </span> <p>augue duis dolore te feugait</p><span class="right_line"> </span></div>
 				   	     <div class="social">	
 						   <ul>	
@@ -126,8 +126,8 @@
 				   </article>
 				    <article style="position: absolute; width: 100%; opacity: 0;"> 
 				    <div class="slider_text">
-				   	  <h1>quod <span class="head">mazim !</span></h1>
-				   	  <h2><span class="green">/Creative</span> one page template.</h2>
+				   	  <h1>quod <span class="head">主页是刚刚粘贴的</span></h1>
+				   	  <h2><span class="green">/Creative</span> 我要慢慢改了，给点时间 !</h2>
 				   	  <div class="m_1"><span class="left_line"> </span> <p>We are a team of professionals</p><span class="right_line"> </span></div>
 				   	    <div class="social">	
 						   <ul>	
