修改注解格式
ctrl + /

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title>Yayan-哑言</title>
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-//网站显示页logo图标
+<!--网站显示页logo图标-->
 <link rel="shortcut icon" href="./images/ooopic.ico">
 <link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
 <link href="css/gallery.css" rel="stylesheet" type="text/css" media="all" />
