添加收藏用logo图标
添加收藏用logo图标

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <!--网站显示页logo图标-->
 <link rel="shortcut icon" href="./images/ooopic.ico">
+<!--收藏用logo图标-->
+<link rel="bookmark"  type="image/x-icon"  href="./images/ooopic1.ico"/>
+
 <link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
 <link href="css/gallery.css" rel="stylesheet" type="text/css" media="all" />
 
