--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 	  		<div class="logo">
 				<ul>
 					<li><a href="index.html"><img src="images/logo.png" alt=""></a></li> &nbsp;&nbsp;&nbsp;
-					<li class="line"> | &nbsp;&nbsp;&nbsp;I'am Your tag line</li>
+					<li class="line"> | &nbsp;&nbsp;&nbsp;Stay Hungry,Stay Foolish.</li>
 					<div class="clear"> </div>
 				</ul>
 			</div>
