--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
 
 <link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
 <link href="css/gallery.css" rel="stylesheet" type="text/css" media="all" />
+<style>
+
+	body,html,#container{
+        height: 20%;
+        margin: 0px;
+      }
+
+</style>
 
 <script src="js/jquery.min.js"></script>
 <script src="js/hover_pack.js"></script>
@@ -735,7 +743,18 @@
 		   </div>
 	  </div>
 	  <div class="map">
-		<iframe width="100%" height="300" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.co.in/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=Lighthouse+Point,+FL,+United+States&amp;aq=4&amp;oq=light&amp;sll=26.275636,-80.087265&amp;sspn=0.04941,0.104628&amp;ie=UTF8&amp;hq=&amp;hnear=Lighthouse+Point,+Broward,+Florida,+United+States&amp;t=m&amp;z=14&amp;ll=26.275636,-80.087265&amp;output=embed"></iframe><br><small><a href="https://maps.google.co.in/maps?f=q&amp;source=embed&amp;hl=en&amp;geocode=&amp;q=Lighthouse+Point,+FL,+United+States&amp;aq=4&amp;oq=light&amp;sll=26.275636,-80.087265&amp;sspn=0.04941,0.104628&amp;ie=UTF8&amp;hq=&amp;hnear=Lighthouse+Point,+Broward,+Florida,+United+States&amp;t=m&amp;z=14&amp;ll=26.275636,-80.087265" style="color:#666;text-align:left;font-size:12px"></a></small>
+		  <!--高德地图的map-->
+		<div id="container" tabindex="0" style="height:500px;"></div>
+		<script type="text/javascript" src="http://webapi.amap.com/maps?v=1.3&key=gQsCAgCrWsuN99ggSIjGn5nO"></script>
+    		<script type="text/javascript">
+					var map = new AMap.Map('container',{
+					resizeEnable: true,
+					zoom: 10,
+					center: [120.161247, 30.1905]
+					});
+			</script>
+			<!--高德地图map，到这里结束-->
+		<!--<iframe width="100%" height="300" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.co.in/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=Lighthouse+Point,+FL,+United+States&amp;aq=4&amp;oq=light&amp;sll=26.275636,-80.087265&amp;sspn=0.04941,0.104628&amp;ie=UTF8&amp;hq=&amp;hnear=Lighthouse+Point,+Broward,+Florida,+United+States&amp;t=m&amp;z=14&amp;ll=26.275636,-80.087265&amp;output=embed"></iframe><br><small><a href="https://maps.google.co.in/maps?f=q&amp;source=embed&amp;hl=en&amp;geocode=&amp;q=Lighthouse+Point,+FL,+United+States&amp;aq=4&amp;oq=light&amp;sll=26.275636,-80.087265&amp;sspn=0.04941,0.104628&amp;ie=UTF8&amp;hq=&amp;hnear=Lighthouse+Point,+Broward,+Florida,+United+States&amp;t=m&amp;z=14&amp;ll=26.275636,-80.087265" style="color:#666;text-align:left;font-size:12px"></a></small>-->
 	  </div>
    </div>
    <div class="footer-bottom">
