--- a/index.html
+++ b/index.html
@@ -13,12 +13,10 @@
 <link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
 <link href="css/gallery.css" rel="stylesheet" type="text/css" media="all" />
 <style>
-
 	body,html,#container{
-        height: 20%;
+        height: 100%;
         margin: 0px;
       }
-
 </style>
 
 <script src="js/jquery.min.js"></script>
@@ -744,8 +742,8 @@
 	  </div>
 	  <div class="map">
 		  <!--高德地图的map-->
-		<div id="container" tabindex="0" style="height:500px;"></div>
-		<script type="text/javascript" src="http://webapi.amap.com/maps?v=1.3&key=gQsCAgCrWsuN99ggSIjGn5nO"></script>
+		<div id="container" tabindex="0" style="height:400px;"></div>
+		<script type="text/javascript" src="https://webapi.amap.com/maps?v=1.3&key=gQsCAgCrWsuN99ggSIjGn5nO"></script>
     		<script type="text/javascript">
 					var map = new AMap.Map('container',{
 					resizeEnable: true,
