修改部分文字，添加网易云播放器
添加网易云音乐播放器

--- a/index.html
+++ b/index.html
@@ -760,18 +760,22 @@
 		<div class="section group">
 				<div class="col_1_of_5 span_1_of_5">
 					<div class="f-logo">
-						<img src="images/f-logo.png" alt=""/>
+						<img src="images/logo.png" alt=""/>
 					</div>
-					<p class="m_10">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci.</p>
+					<p class="m_10">
+						Simple can be harder than complex : You have to work hard to get your thinking clean to make it simple.But it's worth it in the end because once you get there,you can move mountains.
+					</p>
 				</div>
 				<div class="col_1_of_5 span_1_of_5">
-					<h5 class="m_11">Subscribe</h5>
+					<h5 class="m_11">有你想要</h5>
 					 <form class="subscribe">
 			             <input type="text" value="">
 			             <input type="submit" value="">
 			             <div class="clear"></div>
 			          </form>
-					<p class="m_10">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh</p>
+					<p class="m_10">
+						Let's go invent tomorrow rather than worrying about what happened yesterday.
+					</p>
 				</div>
 				<div class="col_1_of_5 span_1_of_5">
 					<h5 class="m_11">Explore</h5>
@@ -829,6 +833,6 @@
 		});
 	});
 	</script>
-<div style="display:none"><script src='http://v7.cnzz.com/stat.php?id=155540&web_id=155540' language='JavaScript' charset='gb2312'></script></div>
+	<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=298 height=52 src="https://music.163.com/outchain/player?type=2&id=33291435&auto=1&height=32"></iframe>
 </body>
 </html>
